--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       command: "init"
     };
 
-  //  timeline.push(pavlovia_init);
+    timeline.push(pavlovia_init);
 
 
 
@@ -88,7 +88,7 @@
       allow_backward: false
     };
 
-  //  timeline.push(LOI);
+    timeline.push(LOI);
 
 
     //function to make sure consent box is clicked before proceeding
@@ -111,7 +111,7 @@
       check_fn: check_consent
     };
 
-//  timeline.push(consent_trial);
+  timeline.push(consent_trial);
 
 
     /**************************/
@@ -135,7 +135,7 @@
     function
     */
 
-  //  timeline.push(audcheck);
+    timeline.push(audcheck);
     var CALIB_SOUNDS = return_audcheck_folder(); //function from audcheck.js
 
     /**************************/
@@ -874,7 +874,7 @@ var induction_test_timelinevars = [
       command: "finish"
     };
 
-  //  timeline.push(pavlovia_close);
+    timeline.push(pavlovia_close);
 
 
     //Final Landing Page
