--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ var induction_test_timelinevars = [
 
     var induction_judgement = {
       type: 'html-button-response',
-      stimulus: 'Were the two sounds a <b>matched pair</b>??',
+      stimulus: 'Were the two sounds a <b>matched pair</b>?',
       choices: ['Yes, they were a matched pair', 'No, they were not a matched pair'],
       data:
         {designation: 'induction',
